added additional attributes for products db
