# server/api/interfaces/iscraper.ts
@@ -10,7 +10,7 @@ interface IScraper {
 
   getScrapedListData(scrapeInfo: ScrapeData): Observable<any>;
 
-  push(name: string, data: string, theme: string, country: string): Observable<any>;
+  push(name: string, data: object): Observable<any>;
   pushSite(name: string, data: string): Observable<any>;
 
   byMicrositeByID(name: string): Observable<any>;
